# postgresql-k8s-operator

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  SECURITY.md  actions.yaml  charmcraft.yaml  concierge.yaml  config.yaml  index.html  metadata.yaml  pyproject.toml  refresh_versions.toml  renovate.json  requirements.txt  review.sh  run_tests  spread.yaml  tox.ini  vex.toml
.github/: .jira_sync_config.yaml  CODEOWNERS  actionlint.yaml  codecov.yml  pull_request_template.md  release.yaml  renovate.json5  zizmor.yaml
16_edge/: index.html
1842/: index.html
1851/: index.html
1875/: index.html
1880/: index.html
1881/: index.html
1896/: index.html
1902/: index.html
1905/: index.html
1908/: index.html
1916/: index.html
1927/: index.html
1931/: index.html
1943/: index.html
1997/: index.html
2000/: index.html
2011/: index.html
2015/: index.html
2051/: index.html
2059/: index.html
2062/: index.html
2087/: index.html
2089/: index.html
2097/: index.html
2111/: index.html
2128/: index.html
2144/: index.html
2161/: index.html
2168/: index.html
2170/: index.html
2208/: index.html
2252/: index.html
2263/: index.html
2268/: index.html
2270/: index.html
2276/: index.html
2298/: index.html
2318/: index.html
2322/: index.html
2330/: index.html
2337/: index.html
2345/: index.html
2347/: index.html
2363/: index.html
2369/: index.html
2375/: index.html
2377/: index.html
2381/: index.html
2395/: index.html
2404/: index.html
2419/: index.html
2426/: index.html
2444/: index.html
2490/: index.html
2503/: index.html
2548/: index.html
2550/: index.html
2574/: index.html
2584/: index.html
2587/: index.html
2588/: index.html
2596/: index.html
2603/: index.html
2614/: index.html
2629/: index.html
2631/: index.html
2654/: index.html
2663/: index.html
2680/: index.html
2681/: index.html
2686/: index.html
2689/: index.html
2705/: index.html
2706/: index.html
2755/: index.html
2756/: index.html
2781/: index.html
2797/: index.html
2807/: index.html
2825/: index.html
2836/: index.html
2853/: index.html
2855/: index.html
2941/: index.html
2955/: index.html
2967/: index.html
2969/: index.html
2970/: index.html
2999/: index.html
3011/: index.html
3012/: index.html
3013/: index.html
3033/: index.html
3043/: index.html
3046/: index.html
3061/: index.html
3065/: index.html
3068/: index.html
3069/: index.html
3070/: index.html
3076/: index.html
3090/: index.html
3102/: index.html
3108/: index.html
3109/: index.html
3113/: index.html
3124/: index.html
3125/: index.html
3134/: index.html
3142/: index.html
3162/: index.html
3189/: index.html
3198/: index.html
3202/: index.html
3210/: index.html
3213/: index.html
3216/: index.html
3220/: index.html
3223/: index.html
3224/: index.html
3225/: index.html
3228/: index.html
3231/: index.html
3243/: index.html
3251/: index.html
3267/: index.html
3274/: index.html
3275/: index.html
3287/: index.html
3298/: index.html
3299/: index.html
3317/: index.html
3322/: index.html
3333/: index.html
3334/: index.html
3347/: index.html
3351/: index.html
3356/: index.html
3357/: index.html
3362/: index.html
3363/: index.html
3367/: index.html
3371/: index.html
3374/: index.html
3387/: index.html
3389/: index.html
3390/: index.html
3395/: index.html
3396/: index.html
3398/: index.html
3401/: index.html
3402/: index.html
3405/: index.html
3406/: index.html
skl-lib/: .gitignore  README.md  SECURITY.md  pyproject.toml
skl-lib/.github/: .jira_sync_config.yaml  pull_request_template.md  renovate.json5  zizmor.yaml
skl-lib/.github/ISSUE_TEMPLATE/: bug_report.md
skl-lib/.github/workflows/: check_pr.yaml  ci.yaml  release.yaml
skl-lib/scripts/: build_charm.sh
skl-lib/single_kernel_postgresql/: __init__.py  charmcraft.yaml
skl-lib/single_kernel_postgresql/charms/: __init__.py  abstract_charm.py  k8s_charm.py  vm_charm.py
skl-lib/single_kernel_postgresql/compat/: __init__.py  postgresql.py
skl-lib/single_kernel_postgresql/config/: __init__.py  enums.py  exceptions.py  literals.py  locales.py  pyproject.toml  statuses.py
skl-lib/single_kernel_postgresql/core/: __init__.py  config.py  peer_relation.py  relation_state.py  state.py
skl-lib/single_kernel_postgresql/events/: __init__.py  postgresql.py  tls_transfer.py
skl-lib/single_kernel_postgresql/lib/charms/data_platform_libs/v0/: data_interfaces.py
skl-lib/single_kernel_postgresql/managers/: __init__.py  base.py  cluster.py  config.py  k8s.py  patroni.py  tls.py
skl-lib/single_kernel_postgresql/utils/: __init__.py  filesystem.py  postgresql.py  secret.py  status.py
skl-lib/single_kernel_postgresql/workload/: __init__.py  base.py  k8s.py  vm.py
skl-lib/single_kernel_postgresql/workload/paths/: __init__.py  base.py  k8s.py  vm.py
skl-lib/tests/: conftest.py  pyproject.toml
skl-lib/tests/charms/postgresql_k8s_test_charm/: actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml
skl-lib/tests/charms/postgresql_k8s_test_charm/src/: charm.py
skl-lib/tests/charms/postgresql_vm_test_charm/: actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  refresh_versions.toml
skl-lib/tests/charms/postgresql_vm_test_charm/src/: charm.py
skl-lib/tests/unit/: test_arch.py  test_config.py  test_filesystem.py  test_literals.py  test_locales.py  test_postgresql.py  test_tls_transfer.py  test_utils.py
tests/integration/new_relations/postgresql-test-app/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  actions.yaml  charmcraft.yaml  metadata.yaml  pyproject.toml  renovate.json  requirements.txt  tox.ini
tests/integration/new_relations/postgresql-test-app/.github/workflows/: ci.yaml  release.yaml
tests/integration/new_relations/postgresql-test-app/lib/charms/data_platform_libs/v0/: data_interfaces.py
tests/integration/new_relations/postgresql-test-app/src/: charm.py  continuous_writes.py
(+313921 files in other folders)
