# Copyright 2021 Canonical Ltd.
# See LICENSE file for licensing details.

[tool.poetry]
package-mode = false
requires-poetry = ">=2.0.0"

[tool.poetry.dependencies]
python = "^3.12"
ops = "^2.23.1"
boto3 = "^1.40.41"
pgconnstr = "^1.0.1"
requests = "^2.32.5"
tenacity = "^9.1.2"
pydantic = "^2.11.9"
jinja2 = "^3.1.6"
lightkube = "^0.17.2"
lightkube-models = "^1.28.1.4"
psycopg2 = "^2.9.10"
httpx = "^0.28.1"
charmlibs-interfaces-tls-certificates = "^1.0.0.post1"
postgresql-charms-single-kernel = "16.1.4"
charm-refresh = "^3.1.1.2"

[tool.poetry.group.charm-libs.dependencies]
# data_platform_libs/v0/data_interfaces.py
ops = ">=2.0.0"
# data_platform_libs/v0/upgrade.py
poetry-core = "*"
# data_platform_libs/v0/data_models.py
# tempo_coordinator_k8s/v0/tracing.py requires pydantic
pydantic = "*"
# loki_k8s/v1/loki_push_api.py and prometheus_k8s/v0/prometheus_scrape.py
cosl = ">=0.0.50"
# tempo_coordinator_k8s/v0/charm_tracing.py
opentelemetry-exporter-otlp-proto-http = "1.21.0"
# certificate_transfer_interface/v0/certificate_transfer.py
jsonschema = "*"

[tool.poetry.group.format]
optional = true

[tool.poetry.group.format.dependencies]
ruff = "^0.13.2"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
codespell = "^2.4.1"
pyright = "^1.1.407"

[tool.poetry.group.unit]
optional = true

[tool.poetry.group.unit.dependencies]
coverage = {extras = ["toml"], version = "^7.10.7"}
pytest = "^9.0.1"
pytest-asyncio = "*"

[tool.poetry.group.integration]
optional = true

[tool.poetry.group.integration.dependencies]
lightkube = "^0.17.2"
pytest = "^9.0.1"
pytest-operator = "^0.43.1"
allure-pytest-default-results = "^0.1.3"
# renovate caret doesn't work: https://github.com/renovatebot/renovate/issues/26940
juju = "<=3.6.1.3"
psycopg2-binary = "^2.9.10"
boto3 = "*"
tenacity = "^9.1.2"
allure-pytest = "^2.15.0"
jubilant = "^1.5.0"
tomli-w = "^1.2.0"
tomli = "^2.3.0"

[tool.poetry.group.build-refresh-version]
optional = true

[tool.poetry.group.build-refresh-version.dependencies]
charm-refresh-build-version = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "logger\\.debug"
]

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
asyncio_mode = "auto"
markers = ["juju3", "juju_secrets"]
addopts = "--exitfirst"

# Linting tools configuration
[tool.ruff]
# preview and explicit preview are enabled for CPY001
preview = true
target-version = "py312"
src = ["src", "."]
line-length = 99

[tool.ruff.lint]
explicit-preview-rules = true
select = ["A", "E", "W", "F", "C", "N", "D", "I001", "B", "CPY001", "RUF", "S", "SIM", "UP", "TC"]
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
# Ignore E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["E501", "D107"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D100", "D101", "D102", "D103", "D104",
    # Asserts
    "B011",
    # Disable security checks for tests
    "S",
]

[tool.ruff.lint.flake8-copyright]
# Check for properly formatted copyright header in each file
author = "Canonical Ltd."
notice-rgx = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+"
min-file-size = 1

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
include = ["src", "scripts"]
exclude = ["src/relations/logical_replication.py"]
extraPaths = ["./lib"]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "basic"
reportIncompatibleMethodOverride = false
reportImportCycles = false
reportMissingModuleSource = true
stubPath = ""
