# Copyright 2021 Canonical Ltd.
# See LICENSE file for licensing details.

[tool.poetry]
package-mode = false
requires-poetry = ">=2.0.0"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
ops = {extras = ["tracing"], version = "^3.7.0"}
boto3 = "^1.43.14"
pgconnstr = "^1.0.1"
requests = "^2.34.2"
tenacity = "^9.1.4"
psycopg2 = "^2.9.12"
pydantic = "^2.13.4"
jinja2 = "^3.1.6"
pysyncobj = "^0.3.15"
psutil = "^7.2.2"
charm-refresh = "^3.1.0.2"
charmlibs-snap = "^1.0.1"
charmlibs-interfaces-tls-certificates = "^1.8.1"
charmlibs-pathops = "^1.0.1"
data-platform-helpers = "^0.1.7"
postgresql-charms-single-kernel = {path = "single_kernel_postgresql"}

[tool.poetry.group.charm-libs.dependencies]
# data_platform_libs/v0/data_interfaces.py
ops = ">=2.0.0"
# data_platform_libs/v0/data_models.py
pydantic = "*"
# grafana_agent/v0/cos_agent.py
cosl = ">=0.0.50"
# certificate_transfer_interface/v0/certificate_transfer.py
jsonschema = "*"

[tool.poetry.group.format]
optional = true

[tool.poetry.group.format.dependencies]
ruff = "^0.15.14"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
codespell = "^2.4.2"
ty = "^0.0.39"

[tool.poetry.group.unit]
optional = true

[tool.poetry.group.unit.dependencies]
coverage = { extras = ["toml"], version = "^7.14.0" }
pytest = "^9.0.3"
pytest-asyncio = "*"
parameterized = "^0.9.0"
jsonschema = "^4.26.0"
tomli-w = "^1.2.0"

[tool.poetry.group.integration]
optional = true

[tool.poetry.group.integration.dependencies]
pytest = "^9.0.3"
pytest-operator = "^0.43.2"
# renovate caret doesn't work: https://github.com/renovatebot/renovate/issues/26940
juju = "<=3.6.1.3"
jubilant = "^1.9.0"
boto3 = "*"
tenacity = "*"
landscape-api-py3 = "^0.9.0"
mailmanclient = "^3.3.5"
psycopg2-binary = "^2.9.12"
allure-pytest = "^2.16.0"
allure-pytest-default-results = "^0.1.4"
tomli = "^2.4.1"
tomli-w = "^1.2.0"
pysyncobj = "*"

[tool.poetry.group.build-refresh-version]
optional = true

[tool.poetry.group.build-refresh-version.dependencies]
charm-refresh-build-version = "^0.4.1"

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = ["logger\\.debug"]

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
asyncio_mode = "auto"
markers = ["juju3", "juju_secrets"]
addopts = "--exitfirst"

# Linting tools configuration
[tool.ruff]
# preview and explicit preview are enabled for CPY001
preview = true
target-version = "py312"
src = ["src", "."]
line-length = 99

[tool.ruff.lint]
explicit-preview-rules = true
select = [
  "A",
  "E",
  "W",
  "F",
  "C",
  "N",
  "D",
  "I001",
  "B",
  "CPY001",
  "RUF",
  "S",
  "SIM",
  "UP",
  "TC",
]
extend-ignore = [
  "D203",
  "D204",
  "D213",
  "D215",
  "D400",
  "D404",
  "D406",
  "D407",
  "D408",
  "D409",
  "D413",
  "B904",
]
# Ignore E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["E501", "D107"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  # Asserts
  "B011",
  # Disable security checks for tests
  "S",
]

[tool.ruff.lint.flake8-copyright]
# Check for properly formatted copyright header in each file
author = "Canonical Ltd."
notice-rgx = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+"
min-file-size = 1

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.environment]
python = ".tox/lint/"
extra-paths = ["./lib"]

[tool.ty.src]
include = ["src", "scripts"]
exclude = ["tests"]