# Copyright 2021 Canonical Ltd.
# See LICENSE file for licensing details.

[tool.poetry]
name = "postgresql-test-app"
version = "0.0.1-dev.0"
description = ""
authors = []
license = "Apache-2.0"
readme = "README.md"
homepage = "https://charmhub.io/postgresql-test-app"
repository = "https://github.com/canonical/postgresql-test-app"

[tool.poetry.dependencies]
python = "^3.10.6"
ops = "2.6.0"
tenacity = "8.2.3"
# psycopg2 = "^2.9.5" # Injected in charmcraft.yaml

[tool.poetry.group.format]
optional = true

[tool.poetry.group.format.dependencies]
black = "23.7.0"
ruff = "0.0.287"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
codespell = "2.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py38"]

# Linting tools configuration
[tool.ruff]
target-version = "py38"
src = ["src", "."]
line-length = 99
select = ["A", "E", "W", "F", "C", "N", "D", "I001", "CPY001"]
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
# Ignore E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["E501", "D107"]

[tool.ruff.flake8-copyright]
# Check for properly formatted copyright header in each file
author = "Canonical Ltd."
notice-rgx = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"
